archive-staging-rke2/namespaces.yaml
---
# Namespace dedicated to keda
apiVersion: v1
kind: Namespace
metadata:
  name: keda
---
# Namespace dedicated to the swh services (e.g. loaders, rpc, ...)
apiVersion: v1
kind: Namespace
metadata:
  name: swh
---
# Namespace dedicated to the swh using cassandra as backend
apiVersion: v1
kind: Namespace
metadata:
  name: swh-cassandra
---
# Namespace for for the next-version validation environment
apiVersion: v1
kind: Namespace
metadata:
  name: swh-cassandra-next-version
---
# Namespace dedicated to cluster monitoring services
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-monitoring-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-provisioner
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
# Namespace dedicated to the ingress-nginx environment
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: software-stories
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
---
# Namespace for cassandra monitoring
apiVersion: v1
kind: Namespace
metadata:
  name: cassandra
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry
---
apiVersion: v1
kind: Namespace
metadata:
  name: svix-server
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8ssandra-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
# Namespace dedicated to redis
---
apiVersion: v1
kind: Namespace
metadata:
  name: ot-operators
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-next-version
---
apiVersion: v1
kind: Namespace
metadata:
  name: osporadar
---
apiVersion: v1
kind: Namespace
metadata:
  name: osporadar-test
---
apiVersion: v1
kind: Namespace
metadata:
  name: renovate
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
