archive-staging-rke2/cassandra_checks_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cassandra-checks
  name: cassandra-checks
  namespace: swh-cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-checks
  template:
    metadata:
      labels:
        app: cassandra-checks
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: swh/journal_client
                operator: In
                values:
                - "true"
      securityContext:
        fsGroup: 1000
      priorityClassName: swh-background-workload
      containers:
        - name: cassandra-checks
          command:
          - /opt/swh/entrypoint.sh
          image: container-registry.softwareheritage.org/swh/infra/swh-apps/cassandra_checks:20240311.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: cassandra-checks-volume
            mountPath: /volume
          - name: cassandra-checks-volume2
            mountPath: /volume2
          - name: swh-config
            mountPath: /etc/swh/
      volumes:
        - name: cassandra-checks-volume
          persistentVolumeClaim:
            claimName: cassandra-checks-pvc
        - name: cassandra-checks-volume2
          persistentVolumeClaim:
            claimName: cassandra-checks-backup
        - name: swh-config
          secret:
            secretName: cassandra-check-config-secret
