archive-staging-rke2/monitoring-cassandra.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-servers-svc
  namespace: cassandra
  labels:
    app: cassandra
spec:
  type: ExternalName
  externalName: "fake-url"
  selector:
    app: cassandra
  ports:
    - name: jmx-exporter
      port: 7070
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: cassandra-servers
  namespace: cassandra
  labels:
    app: cassandra
    kubernetes.io/service-name: cassandra-servers-svc
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.130.181"
      - "192.168.130.182"
      - "192.168.130.183"
    conditions: {}
ports:
  - name: jmx-exporter
    port: 7070
    protocol: TCP
