archive-staging-rke2/graphql-vhost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-vhost-redirect
  namespace: swh
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://webapp.staging.swh.network/graphql/"
spec:
  rules:
    - host: graphql.staging.swh.network
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graphql
                port:
                  number: 5013
