archive-staging-rke2/reaper.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cassandra
  name: reaper
  labels:
    app: reaper
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: reaper
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reaper
    spec:
      containers:
        - name: reaper
          image: thelastpickle/cassandra-reaper:4.2.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: admin # for metrics
          startupProbe:
            httpGet:
              path: /ping
              port: admin
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: admin
            initialDelaySeconds: 10
            periodSeconds: 5
---
# for now, the webui is reachable at http://localhost:8080/webui
# through a port forward
# kubectl port-forward -n cassandra service/reaper 8080:8080 8081:8081
apiVersion: v1
kind: Service
metadata:
  namespace: cassandra
  name: reaper
  labels:
    app: reaper
spec:
  type: ClusterIP
  selector:
    app: reaper
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: admin
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reaper-webui-ingress
  namespace: cassandra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-gandi
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/app-root: /webui
spec:
  rules:
  - host: reaper.internal.staging.swh.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reaper
            port:
              name: http
  tls:
  - hosts:
    - reaper.internal.staging.swh.network
    secretName: reaper-crt
